--- a/references.bib
+++ b/references.bib
@@ -382,7 +382,7 @@ year = 2014,
 }
 
 @inproceedings{Kornacker+15,
-author={Marcel Kornacker and Alexander Behm and Victor Bittorf and Taras Bobrovytsky and Casey Ching and Alan Choi and Justin Erickson and Martin Grund and Daniel Hecht and Matthew Jacobs and Ishaan Joshi and Lenni Kuff and Dileep Kumar and Alex Leblang and Nong Li and Ippokratis Pandis and Henry Robinson and David Rorke and Silvius Rus and John Russell and Dimitris Tsirogiannis and Skye Wanderman-Milne and Michael Yoder},
+author={Marcel Kornacker and et.al.},
 title={Impala: A Modern, Open-Source {SQL} Engine for {Hadoop}},
 booktitle = {CIDR},
 year = {2015},
